# ASRClients

./: .gitignore  LICENSE  README.md  example_snsd.json  main.py  non_streaming_client.py  pyproject.toml  requirements.txt  streaming_client.py
.github/workflows/: ci.yaml
licenses/: MIT-pyaudio.txt
